@@ -239,3 +239,5 @@ SGC is enabled.  */
 #undef SIZEOF_CONTBLOCK
 
 #undef GCL_GPROF
+#undef HAVE_DECL_RL_COMPLETION_MATCHES
+#undef HAVE_RL_COMPENTRY_FUNC_T
